--- a/PeopleMon/app/src/main/res/values/strings.xml
+++ b/PeopleMon/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="passwords_do_not_match">Error your passwords do not match</string>
     <string name="must_provide_password">Must provide username and password</string>
     <string name="login_failed">Login Failed</string>
+    <string name="google_android_map_api_key">AIzaSyDFnw0l7xG-e9UbdGsd_uLIG9taLoENiSQ</string>
 </resources>
